--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -41,6 +41,15 @@ header {
 	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
+table, th, td {
+    border: 1px solid black;
+    float: center;
+    position: center;
+    /*
+    position: absolute;
+    */
+}
+
 .arrondissements {
     text-align: center;
     float: left;
@@ -58,7 +67,9 @@ header {
 footer {
     padding-right: 0;
     padding-left: 0;
+    /*
     position: fixed;
+    */
     text-align: center;
     bottom: 10px;
     width: 100%;
