--- a/website/templates/default.html
+++ b/website/templates/default.html
@@ -5,13 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 
-	<title>website</title>
+	<title>Try harder, STM.</title>
 
 	<link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header>
-    <h1>website</h1>
+    <h1>Try harder, STM.</h1>
 </header>
     <main>
         $body$
