--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -25,6 +25,15 @@ h2 {
 h3 {
 	font-size: 28px;
 	color:  #275486;
+    margin-bottom: 3px;
+    height: 80px;
+}
+
+h4 {
+    text-align: center;
+	font-size: 22;
+    color: #282b2c;
+    padding-bottom: 10px;
 }
 
 header {
@@ -41,12 +50,24 @@ header {
 	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
+.obnoxious {
+    font-size: 22px;
+    font-weight: bold;
+	color: #282b2c;
+}
+
+table {
+    margin-right: auto;
+    margin-left: auto;
+}
+
 table, th, td {
     border: 1px solid black;
     float: center;
     position: center;
     /*
-    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     */
 }
 
